# PO-generator

./: .gitignore  DEPLOY.md  README.md  app.sh  deploy-prod-po-generator.sh  deploy.bat  deploy.sh  dev.sh  ecosystem.config.js  manage_users.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  run-dev-po-generator.sh  run-dev.sh  run-po-generator.bat  server.js
backend/: manage.py  manage_db.sh  pyproject.toml  requirements.txt  run_django.sh
backend/api/: models.py  serializers.py  urls.py  views.py
backend/api/management/commands/: create_user.py  list_users.py
backend/api/migrations/: 0001_initial.py  0002_alter_purchaseorder_po_number.py  0003_alter_purchaseorder_approval_stamp.py
backend/po_generator/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json  run_node.sh  server.js
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.css  index.js  setupProxy.js
frontend/src/api/: axios.js
frontend/src/components/: Layout.js  Navigation.js  PrivateRoute.js
frontend/src/context/: AuthContext.js
frontend/src/pages/: CreatePurchaseOrder.js  Dashboard.js  EditPurchaseOrder.js  LineItems.js  Login.js  NotFound.js  PurchaseOrders.js  UserProfile.js  Vendors.js
public/: index.html  script.js  styles.css  tests.js
